[package]
name = "gtkmarkdown"
version = "0.1.0"
edition = "2021"
authors = ["Marco Farioli <marco.farioli@outlook.it>"]
license = "MIT"
repository = "https://github.com/neaaar/gtk-markdown"

[dependencies]
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_18"] }
glib = "0.20.10"
pulldown-cmark = "0.13.0"
webkit6 = "0.5.0"
